--- a/_sass/table.scss
+++ b/_sass/table.scss
@@ -82,7 +82,7 @@ table code {
 table code {
   background-color: transparent;
 }
-pre,
+
 table code {
   white-space: pre-wrap;
   /* css-3 */
